# qr-code-generater

./: README.md  main.py  pyproject.toml
src/qrstudio/encoding/: encoders.py
src/qrstudio/ui/: tk_app.py
tests/: test_service.py
